--- a/index.html
+++ b/index.html
@@ -15,4 +15,11 @@
     <a href="google.com">click me!</a>
     <img src="USC-logo.jpg"
     </center>
+    
+    <h2>Engineering Journal</h2>
+    <p>9/2/2022 - This week we played around with Tinker CAD
+    and learned the basics. We use it for 3d modeling. 
+    We did a fun challenge on Tinker CAD. 
+    I made a pizza oven.</p>
+    
 </html>
