Nine sixteen journal entry

--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
     and learned the basics. We use it for 3d modeling. 
     We did a fun challenge on Tinker CAD. 
     I made a pizza oven.</p>
+    <p>9/16/2022 - This week we started our Rube Goldberg project.
+    We also did a challenge where we had to make a boat by 
+    only using paper and see how long the boat could float. Regaurding
+    the project, we cut out cardboard and made a ramp.</p>
     
 </html>
