--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     We also did a challenge where we had to make a boat by 
     only using paper and see how long the boat could float. Regaurding
     the project, we cut out cardboard and made a ramp.</p>
+    <p>9/23/2022 - This week we did more improvements on the Goldberg
+    project. We had added more parts to the car. We also tested our 
+    project and it worked the first time. That was a big accomplishment.</p>
     
 </html>
