--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     inside of the laptop. It was quite enjoyable.</p>
     <img src = "C1.png" width = "200px" height = "100">
     <img src = "C2.png" width = "200px" height = "100">
+    <p>10/7/2022 - This week I worked on making prosthetic animmal
+    limbs and I created a prosethic turtle limb.</p>
+    <img src = "C3.png" width = "200px" height = "100"> 
     
     
 </html>
