--- a/index.html
+++ b/index.html
@@ -83,8 +83,65 @@
     actual circuits and turned on light bulbs. We used different this to help
     us. We used a type of measuring tool that helped us measure Voltage and 
     the amount of resistance. It was a little confusing for me at first,
-    however I quickly got a grasp on things. In the end, it was really fun.</p>
+    however I quickly got a grasp on things. In the end, it was really 
+    fun.</p>
     <img src = "C13.png" width = "200px" height = "200">
-    
-    
+    <p><b><i><u>11/18/2022</u></i></b></p> - This week we experimented with
+    an electrical engineering website. We used it to power our light bulb
+    and see if the light would turn on. It was a very fun simulation and it
+    was very excting to see how the different settings changed the light
+    bulb color and brightness.
+    <br>
+    <img src = "C14.png" width = "100px" height = "100">
+    <img src = "C15.png" width = "100px" height = "100">
+    <p><b><i><u>12/2/2022</u></i></b></p> - This week we had started
+    our final project. It was making a spagehti bridge. We started Tinker 
+    CADing it today. We made two iterations of our bridge. One with triangles
+    and another that is kind of in the shape of a latter. The one on the
+    left is the trinagle bridge and the one on the right is the latter.
+    Out of the two, the triangles seemed that they were the more structurely
+    stable one. Only because the base had more support compared to the other.
+    <br>
+    <img src = "C16.png" width = "200px" height = "100">
+    <img src = "C17.png" width = "200px" height = "100">
+    <p><b><i><u>12/9/2022</u></i></b></p> - This week we had built the two 
+    bridges from the previous week and we had been also able to test them 
+    as well. They both required a lot of glue to keep them together. 
+    It also took a lot of presice and careful cutting of the spagehti to get
+    the bridge we wanted. In the end, our triangle bridge did not sucessfullly
+    hold the cup of water we had. My hypothosis was incorrect unfourtanetly.
+    The second bridge was the one that had lasted the longest out of the 
+    two bridges. We asume the sides were the part of the bridge that 
+    held it together the best. We had also been able to start another
+    iteration of our bridge. The one with the spagehti going acroos similar to 
+    the latter iteration. We had also started bridge and just clumped all of 
+    the spagehti pieces together.
+    <br>
+    <img src = "C18.png" width = "200px" height = "100">
+    <img src = "C19.png" width = "200px" height = "100">
+    <p><b><i><u>12/16/2022</u></i></b></p> - This week we had continued with
+    spagehti project. We tested out the second type of latter bridge and this
+    one suprisingly worked really well with the small plastic cup. But when we
+    switched over to the ace hard plasic bucket, it broke. We had also been able
+    to finish the clumped spagehti bridge that we started on the week before.
+    We were then able to test it. It held around two to three cups of water. 
+    The most out of all of them. 
+    <br>
+    <img src = "C20.png" width = "250px" height = "150">
+    <video width="300" height="200" controls="" loop=""> 
+        <source src="RPReplay_Final1671598329.MP4" type="video/mp4">
+    </video>
+   <p><b><i><u>12/20/2022</u></i></b></p> - This week we completed our final
+   project for the spagehti bridges. We ended up doing and reverting back to the
+   bridge where we stuck all of the spagehti together. It held up the best under
+   heavy weight. Even though it didn't look the best, it was very strong. Our
+   bridge came in weighing at about 16 ounces. Our bridge carried around 60 to 
+   61 ounces of water with the big red Ace bucket. That's around two cups of 
+   water. In the end, one of the sides brocke of possibly because of not enough
+   glue or lack of support. However I am still pleased with the results of the
+   bridge. 
+   <br>
+   <img src = "C21.png" width = "200px" height = "100">
+   <video width="300" height="200" controls="" loop=""> 
+        <source src="RPReplay_Final1671602437 (1).MP4" type="video/mp4">
 </html>
