--- a/index.html
+++ b/index.html
@@ -144,4 +144,37 @@
    <img src = "C21.png" width = "200px" height = "100">
    <video width="300" height="200" controls="" loop=""> 
         <source src="RPReplay_Final1671602437 (1).MP4" type="video/mp4">
+    </video>
+    <p><b><i><u>1/9/2023 - 3/7/2023</u></i></b></p>
+    It was reasonable but not great in terms of running. We had made it about 
+    1/4 to half way of the entire floor. Also, our project could have used some 
+    updates but overall a reasonable presentation. We did achieve what we set out
+    for. We were going for something that was good enough to run well and our 
+    project did run well. Our design does match our CAD because we based the 
+    design off of our CAD. I learned that even though something may look really
+    easy to make, it is really not. My partner and I had to put in a lot of 
+    effort to complete it and at times it was challenging. However, we overcame 
+    the obstacle building a well-constructed car. The most challenging part 
+    about making our project was trying to get the wheels stable on the car. 
+    It was still a little wobbly however it wasn't what it was in the beginning
+    however. I would have added a better material to hold the mouse trap and 
+    the stick attached to it. The mousetrap had fallen off midway during the 
+    run which stop the car from going forward. I would rate myself eight. I 
+    helped out with a good amount of work. I could have helped out a little 
+    more with the building of the second iteration of the car a little more. 
+    The project was very good overall. I think that both Miles and I contributed
+    to the building project. It was very fun. We had planned out everything in 
+    advance on the google doc and everything went somewhat as planned. The only 
+    thing however was that the materials that we had thought originally we were
+    going to use was not what we actually did. We had actually simplified most of 
+    the materials and came down to only a minimal amount. The original was going
+    to be much more costly and I think everything worked out for the best. Here 
+    are some of the images/videos of materials, mousetraps cars, building, etc.
+    <br>
+    <img src = "C22.png" width = "300px" height = "300">
+    <img src = "C23.png" width = "300px" height = "300">
+    <img src = "C24.png" width = "300px" height = "300">
+    <img src = "C25.png" width = "300px" height = "300">
+    <img src = "C26.png" width = "300px" height = "300">
+    <img src = "C27.png" width = "300px" height = "300">
 </html>
