--- a/index.html
+++ b/index.html
@@ -177,4 +177,7 @@
     <img src = "C25.png" width = "300px" height = "300">
     <img src = "C26.png" width = "300px" height = "300">
     <img src = "C27.png" width = "300px" height = "300">
+    <video width="300" height="200" controls="" loop=""> 
+        <source src="IMG_0046 (1).MOV" type="video/MOV">
+    </video>
 </html>
