--- a/index.html
+++ b/index.html
@@ -180,4 +180,13 @@
     <video width="300" height="200" controls="" loop=""> 
         <source src="IMG_0046 (1).MOV" type="video/MOV">
     </video>
+        <br>
+    <p><b><i><u>3/24/23</u></i></b></p>
+    This week we started a new project and started desinging the no break
+    egg challene. We started with a list of materials and sketched out a CAD
+    of our project. It consists of tape and straws. The egg will be in the middle 
+    and the egg will be safe because the straws will absorb the blow of the egg.
+    Also it is light weight so it won't go down as hard.
+    <br>
+    <img src = "C28.png" width = "400px" height = "300">
 </html>
