--- a/index.html
+++ b/index.html
@@ -189,4 +189,18 @@
     Also it is light weight so it won't go down as hard.
     <br>
     <img src = "C28.png" width = "400px" height = "300">
+    <p><b><i><u>4/1/23 - 4/20/23</u></i></b></p>
+    During this duration of time we had launched our eggs from 
+    the roof, and started our final project. We had ended up 
+    building the egg CAD we made and stuck to it just making a few
+    minor adjustments overall. The other thing our group did to make it 
+    work is that we had surrounded the egg in cotton balls which helped
+    with the support of it making our design work really well. Our
+    egg did not crack at all. It was very safe. I am really happy about the 
+    outcome of our pr0ject. We then started our final project and that is 
+    to make a giant boat that will hold two people without sinking. We 
+    started recently cutting it out and making things for it. It is a very
+    large boat and we hope that it will work. 
+    <br>
+    
 </html>
