--- a/index.html
+++ b/index.html
@@ -202,5 +202,45 @@
     started recently cutting it out and making things for it. It is a very
     large boat and we hope that it will work. 
     <br>
+    <p><b><i><u>5/12/23</u></i></b></p>
+    This week we had built a paper marble coaster. Ours was not that long 
+    but it worked okay. It was deffinetely decent  in line with the fact that we 
+    only worked on it for an hour and a half but it still could have had some 
+    improvements. We also worked on our boat a little more and we added more cardboard.
+    <br>
+    <p><b><i><u>5/26/23</u></i></b></p>
+    This week we had significantly worked on our boat. We had recieved our tape
+    and we were able to really work on our boat a lot. We decided at first to 
+    try to make the longest boat then we decided to change that and make still
+    a large boat, but not as big. We did not put cardboard on the bottom. We just
+    used the tape for the sides. We curved in the front which was a very good
+    design that was made. Also, we made the back flat and upright that way we could
+    have back support. It was a very smart decision. We ended up running out of 
+    tape but luckly we finished our boat in time. 
+    <br>
+    <p><b><i><u>6/2/23</u></i></b></p>
+    This week we tested our boat finally. The results of our boat was that we 
+    barely made it past to starting point. It was pretty bad. Connor and Alec 
+    had gotten in or boat and once the two of them went in, the boat tipped over 
+    and took on a lot of water. The boat did rip and we took on a lot of water. 
+    It was not good at all. We only made it a few yards away from the starting point.
+    It actually preformed better than expected surprisingly. We were able to float 
+    for a second which was something i never expected. It was a very fun 
+    experience/project and hope we do it again in the future.
+    <br>
+    <p><b><i><u>Images from 4/1/23 - 6/2/23:</u></i></b></p>
+    <br>
+    <video width="300" height="200" controls="" loop=""> 
+        <source src="paperCoaster.mp4" type="video/mp4">
+    </video>
+    <br>
+    <img src = "C29.png" width = "400px" height = "200">
+    <img src = "C30.png" width = "400px" height = "200">
+    <img src = "C31.png" width = "400px" height = "200">
+     <video width="300" height="200" controls="" loop=""> 
+        <source src="DanielBoat.mp4" type="video/mp4">
+    </video>
+    <img src = "C32.png" width = "400px" height = "200">
     
+    <p><b><i><u>FIN</u></i></b></p>
 </html>
